@@ -162,13 +162,13 @@ array *array_init(void);
 array *array_init_array(array *a);
 void array_free(array *a);
 void array_reset(array *a);
-int array_insert_unique(array *a, data_unset *str);
-data_unset *array_pop(array *a);
+void array_insert_unique(array *a, data_unset *entry);
+data_unset *array_pop(array *a); /* only works on "simple" lists with autogenerated keys */
 int array_print(array *a, int depth);
 data_unset *array_get_unused_element(array *a, data_type_t t);
 data_unset *array_get_element(array *a, const char *key);
 void array_set_key_value(array *hdrs, const char *key, size_t key_len, const char *value, size_t val_len);
-data_unset *array_replace(array *a, data_unset *du);
+void array_replace(array *a, data_unset *entry);
 int array_strcasecmp(const char *a, size_t a_len, const char *b, size_t b_len);
 void array_print_indent(int depth);
 size_t array_get_max_key_length(array *a);
