@@ -27,6 +27,7 @@ NEWS
   * [mod_dirlisting] dir-listing.hide-dotfiles = "enabled" by default (fixes #1081)
   * [mod_secdownload] fix buffer overflow in secdl_verify_mac (reported by Fortify Open Review Project)
   * [mod_fastcgi,mod_scgi] fix leaking file-descriptor when backend spawning failed (reported by Fortify Open Review Project)
+  * [core] improve array API to prevent memory leaks
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
